--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <!-- footer -->
 <footer class="footer">
-    <div class="container">
+    <div class="container1">
         <div class="row1">
             <div class="footer-col">
                 <h4>company</h4>
