--- a/footer.html
+++ b/footer.html
@@ -33,7 +33,7 @@
             <div class="footer-col">
                 <h4>follow us</h4>
                 <div class="social-links">
-                    <a href="demo.php"><i class="fab fa-facebook-f"></i></a>
+                    <a href=""><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
